# test-randla

./: .gitignore  README.md  apply.py  bev_features.py  conf.yml  extend_weights.py  extract_buildings_las.py  generate_labels.py  main.py  pyproject.toml  ramdisk_setup.sh  ramdisk_teardown.sh  randlanet_semantic3d_bev.yml  randlanet_toronto3d_bev_config.yml  randlanet_toronto3d_config.yml  randlanet_toronto3d_dual_config.yml  raster_features.py  requirements.txt  run_bev.sh  run_pipeline.sh
