[project]
name = "codespaces-blank"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.14"
dependencies = [
    "absl-py==2.4.0",
    "addict==2.4.0",
    "blinker==1.9.0",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "dash==4.0.0",
    "filelock==3.20.0",
    "flask==3.1.3",
    "fonttools==4.61.1",
    "fsspec==2025.12.0",
    "grpcio==1.78.0",
    "idna==3.11",
    "importlib-metadata==8.7.1",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "joblib==1.5.3",
    "kiwisolver==1.4.9",
    "laspy==2.7.0",
    "markdown==3.10.2",
    "markupsafe==3.0.3",
    "matplotlib==3.10.8",
    "mpmath==1.3.0",
    "narwhals==2.17.0",
    "nest-asyncio==1.6.0",
    "networkx==3.6.1",
    "numpy==1.26.4",
    "open3d==0.19.0",
    "packaging==26.0",
    "pandas==3.0.1",
    "pillow==12.1.1",
    "plotly==6.5.2",
    "protobuf==7.34.0",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "retrying==1.4.2",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "setuptools==82.0.0",
    "six==1.17.0",
    "sympy==1.14.0",
    "tensorboard==2.20.0",
    "tensorboard-data-server==0.7.2",
    "threadpoolctl==3.6.0",
    "torch==2.2.2+cpu",
    "torchaudio==2.2.2+cpu",
    "torchvision==0.17.2+cpu",
    "tqdm==4.67.3",
    "typing-extensions==4.15.0",
    "urllib3==2.6.3",
    "werkzeug==3.1.6",
    "zipp==3.23.0",
]
